--- a/user_configuration.json
+++ b/user_configuration.json
@@ -47,7 +47,8 @@
     "ntp": true,
     "offline": false,
     "packages": [
-        "git"
+        "git",
+        "stow"
     ],
     "parallel downloads": 0,
     "profile_config": {
